# BotFatir

./: .env.example  .gitignore  CONTEXT.md  README.md  ROADMAP.md  config.yaml  pyproject.toml  requirements.txt  run.ps1  test-telegram.bat
data/: search_zone.geojson
deploy/: botfatir.service  install.sh
src/botfatir/: __init__.py  __main__.py  config.py  db.py  filters.py  freshness.py  geo.py  models.py  notifier.py  poll.py
src/botfatir/bot/: handlers.py
src/botfatir/scrapers/: __init__.py  avito.py  base.py  cian.py  domclick.py  http.py
